--- a/react-redux-zustand/package.json
+++ b/react-redux-zustand/package.json
@@ -8,11 +8,13 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "server": "json-server server.json -w",
     "test": "vitest run",
     "test:watch": "vitest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.488.0",
     "radix-ui": "^1.2.0",
